# provii-issuer

./: .editorconfig  .env.example  .gitattributes  .gitignore  .gitleaks.toml  .trivyignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  deny.toml  wrangler.toml
.github/: PULL_REQUEST_TEMPLATE.md  allowed_signers  dependabot.yml  zizmor.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  cla.yml  fuzz.yml  mutants.yml  prod-bundle-entropy-scan.yml  publish-openapi.yml  sbom.yml  security-audit.yml
.semgrep/: provii-workers.yaml
crates/issuer-logic/: Cargo.toml
crates/issuer-logic/src/: crypto.rs  error.rs  identifier.rs  lib.rs  prefix_rejection.rs  rate_limiting.rs  redaction.rs  secret_fingerprint.rs
examples/: README.md  client_usage.js  generate_officer-cose.js  register_client.js  register_officer.js  test_issuance.js
fuzz/: Cargo.toml  fuzz_12h_all.sh  fuzz_12h_individual.sh  fuzz_12h_parallel.sh
fuzz/dictionaries/: base64.dict  crypto.dict  json.dict
fuzz/fuzz_targets/: fuzz_base64_serde.rs  fuzz_canonical_messages.rs  fuzz_hmac_verification.rs  fuzz_json_parsing.rs  fuzz_redjubjub_signing.rs  fuzz_routes_validation.rs  fuzz_session_lifecycle.rs  fuzz_storage_kvparse.rs
openapi/: openapi.json
scripts/: backup-kv.sh  compliance-check.sh  restore-kv.sh
src/: analytics.rs  audit.rs  bindings.rs  constants.rs  cors.rs  crypto.rs  error.rs  fetch_metadata.rs  hash.rs  health.rs  internal_admin.rs  internal_version.rs  kek.rs  key_rotation.rs  lib.rs  logging.rs  openapi.rs  rate_limiting.rs  resource_lock.rs  routes.rs  routes_sandbox_cred.rs  secret_cache.rs  secret_fingerprint.rs  session.rs  session_security.rs  ssrf_protection.rs  storage.rs  types.rs  types_tests.rs  validation.rs
src/durable_objects/: mod.rs  nonce_do.rs  resource_lock.rs
src/security/: client_auth.rs  docs_hmac.rs  header_parsing.rs  mod.rs  prefix_rejection.rs
tests/: cache_headers_test.rs  canonical_message_test.rs  prefix_rejection_test.rs  sandbox_cred_envelope_test.rs  security_enhancement_tests.rs
tests/fixtures/: canonical_message_vectors.json
tools/: README.md
tools/admin-officer/: Cargo.toml
tools/admin-officer/src/: main.rs
tools/generate-issuer-keys/: Cargo.toml
tools/generate-issuer-keys/src/: main.rs
tools/key-rotation/: Cargo.toml  README.md
tools/key-rotation/src/: main.rs
