[workspace]
members = [".", "crates/issuer-logic"]
exclude = [
  "fuzz",
  "tools/generate-issuer-keys",
  "tools/key-rotation",
  "tools/admin-officer",
]
resolver = "2"

[package]
name = "provii-issuer-worker"
version = "0.1.0"
edition = "2021"
rust-version = "1.82"
license = "AGPL-3.0-only"
authors = ["tom@maelstrom.au"]

[lib]
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Core worker runtime
console_error_panic_hook = "0.1"
worker = { version = "0.7.4", features = ["queue"] }
wasm-bindgen = "0.2"
js-sys = "0.3"
# R2: bound the volumetric rate-limit counter's KV get/put with a timeout
# (mirrors provii-verifier/src/utils/timeout.rs). `futures` supplies the
# select/pin_mut/Either combinators; `wasm-bindgen-futures` adapts the
# setTimeout JS promise into a Rust future. Both were previously only
# transitive; the with_timeout combinator needs them as direct deps.
futures = "0.3"
wasm-bindgen-futures = "0.4"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1.0"
# OS-006/OS-007 Monitor: unmaintained transitive deps `paste` and
# `proc-macro-error` pulled in by serde_valid. Track upstream for a
# release that drops them.
serde_valid = "0.21"

# Utilities
uuid = { version = "1", features = ["v4", "serde", "js"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
hex = "0.4"
anyhow = "1"
thiserror = "1"
zeroize = { version = "1.7", features = ["derive", "serde"] }
url = "2"
unicode-normalization = "0.1"

# Cryptography
# OS-009: SHA-1 is used ONLY for YubiKey HMAC-SHA1 challenge-response
# verification (src/session.rs). YubiKeys require HMAC-SHA1 by hardware
# spec; this is NOT used for signatures, password hashing, or any other
# security-critical purpose.
sha1 = "0.10"
sha2 = "0.10"
getrandom = { version = "0.2", features = ["js"] }
# OS-008: Pre-release hmac 0.13.0-pre.4 and sha2 0.11.0-pre.4 appear
# in the dependency tree as transitives of bip32/zcash_primitives (via
# provii-crypto). These will be upgraded once RustCrypto publishes
# stable releases of the 0.13/0.11 lines.
hmac = "0.12"
group = "0.13"
jubjub = "0.10.0"
argon2 = { version = "0.5", features = ["std"] } # Argon2id for API key hashing
subtle = "2.6"

# Provii issuer-logic (pure business logic, host-testable)
issuer-logic = { path = "crates/issuer-logic", version = "0.1.0" }

# Provii crypto crates (path deps resolve against local siblings)
provii-crypto-commons = { path = "../provii-crypto/crypto-commons", version = "0.1.0" }
provii-crypto-sig-redjubjub = { path = "../provii-crypto/crypto-sig-redjubjub", version = "0.1.0" }
provii-crypto-commit = { path = "../provii-crypto/crypto-commit", version = "0.1.0" }

# Provii shared audit logging
provii-audit = { path = "../provii-audit/rust", version = "0.1.0" }

# Ed25519 for attestation verification (blind issuance)
ed25519-dalek = { version = "2.1", default-features = false, features = [
  "alloc",
  "zeroize",
] }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
proptest = "1.5"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[features]
default = []

[lints.clippy]
# Panic prevention
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
# Arithmetic safety
arithmetic_side_effects = "deny"
cast_possible_truncation = "deny"
cast_possible_wrap = "deny"
cast_sign_loss = "deny"
# Indexing safety
indexing_slicing = "deny"
string_slice = "deny"
# Code quality
dbg_macro = "deny"
print_stdout = "deny"
print_stderr = "deny"
# Style
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
too_many_arguments = "allow"

[profile.release]
opt-level = "z"        # Optimize for size
lto = true
codegen-units = 1
overflow-checks = true
