[package]
name = "provii-issuer-worker-fuzz"
version = "0.0.0"
publish = false
edition = "2021"
license = "AGPL-3.0-only"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
base64 = "0.22"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hmac = "0.12"
sha1 = "0.10"
sha2 = "0.10"
uuid = { version = "1", features = ["v4", "serde"] }
subtle = "2.6"

[dependencies.provii_issuer_worker]
path = ".."
package = "provii-issuer-worker"

[[bin]]
name = "fuzz_redjubjub_signing"
path = "fuzz_targets/fuzz_redjubjub_signing.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_hmac_verification"
path = "fuzz_targets/fuzz_hmac_verification.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_base64_serde"
path = "fuzz_targets/fuzz_base64_serde.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_json_parsing"
path = "fuzz_targets/fuzz_json_parsing.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_routes_validation"
path = "fuzz_targets/fuzz_routes_validation.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_storage_kvparse"
path = "fuzz_targets/fuzz_storage_kvparse.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_canonical_messages"
path = "fuzz_targets/fuzz_canonical_messages.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_session_lifecycle"
path = "fuzz_targets/fuzz_session_lifecycle.rs"
test = false
doc = false
bench = false
