[package]
name = "key-rotation"
version = "2.0.0"
edition = "2021"
license = "AGPL-3.0-only"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
chrono = "0.4"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
anyhow = "1"
provii-crypto-sig-redjubjub = { path = "../../../provii-crypto/crypto-sig-redjubjub" }
urlencoding = "2"
zeroize = { version = "1.7", features = ["derive"] }
aes-gcm = "0.10"
getrandom = "0.2"
